# Linear-Waves-and-Base-Shear-Estimation-

./: .gitignore  .pylintrc  .pylintrc.txt  3dWaveSim.md  LoadEstProf  README.md  airy.py  airyspatial.py  base_shear_con.txt  cond_dens.csv  cond_rwave_sim.py  crest_dist_est.ipynb  crest_dist_est.py  fft_rand_wave_sim.py  force_dist_est.prof  force_dist_est.py  max_crests.txt  old_rand_wave_sim.py  profiler  profiler.txt  profiling.ipynb  pyproject.toml  rand_wave_sim.ipynb  rand_wave_sim.py  rand_wave_spatial_sim.ipynb  rand_wave_spatial_sim.py  read_probs.ipynb  requirements.txt  sea_state_ps.txt  setup.cfg  setup.py  simple_rand_wave_sim.py  stokes.py  stokesspatial.py  stokeswithspace.py  stringari_jonswap.py  test.py  ux_fft  wavesim_functions.py
2024Paper_scripts/: cde_plot.py  cond_dens_duo.csv  cond_dens_duo_10000_100.csv  cond_dens_duo_1500_100.csv  cond_dens_duo_200_100.csv  cond_dens_duo_300_100.csv  cond_dens_duo_500_100.csv  cond_dens_est.py  dist_write_parallel.py  duo_cyl.out  duo_cyl.sh  env_probs.csv  fail_ps_duo.csv  fail_ps_duo_10000_100.csv  fail_ps_duo_1500_100.csv  fail_ps_duo_200_100.csv  fail_ps_duo_300_100.csv  fail_ps_duo_500_100.csv
docs/: code_structure.md
scripts/: LoadEstProf  airy.py  comp.py  cond_dens.csv  cond_dens_est.py  dist_read.ipynb  dist_write.py  env_probs.csv  force_dist_est.prof  force_dist_est.py  linear.py  load-est.py  load.profile  load_conv.ipynb  load_conv.py  load_est.py  load_est_profiling.py  loads_est.py  rand_wave_sim.ipynb  rand_wave_sim.py  rand_wave_spatial_sim.ipynb  rand_wave_spatial_sim.py  rand_wave_test.py  (+4 more)
(+25 files in other folders)
