[metadata]
name = wavesim
version = 0.1.0
author = Matthew Speers
author_email = m.speers@lancaster.ac.uk
description = wave simulation code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/speers26/force_calculation_and_wave_sim

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    scipy

package_dir =
    = src

[options.packages.find]
where = src

[pycodestyle]
max-line-length = 120